--- a/index.html
+++ b/index.html
@@ -7,14 +7,33 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <header></header>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <footer></footer>
+    <div>
+        <header class="head-container">
+            <div class="logo"><img src="assets/logo.svg" alt="logo"></div>
+            <div class="now-playing">
+                <div class="text-nowplaying">NOW PLAYING</div>
+                <div class="text-artist">Kandace Springs</div>
+                <div class="text-song">Soul Eyes</div>
+            </div>
+            <div class="play-button"><img src="./assets/play_button.svg" alt="play_button"></div>
+        </header>
+
+        <div class="row2"><img src="./assets/row2.svg" alt="row2"></div>
+
+        <div class="row3">
+            <div class="howto">HOW TO <br> LISTEN <br> TO</div>
+            <div class="pallino"></div>
+            <div class="strano"></div>
+            <div class="lista"></div>
+        </div>
+
+        <div class="row4"></div>
+        <div class="row5"></div>
+        <div class="row6"></div>
+        <div class="row7"></div>
+        <div class="row8"></div>
+        <footer></footer>
+    </div>
+    
 </body>
 </html>
