work in progress

--- a/index.html
+++ b/index.html
@@ -9,25 +9,57 @@
 <body>
     <div>
         <header class="head-container">
-            <div class="logo"><img src="assets/logo.svg" alt="logo"></div>
+            <div class="logo"><img id="logo" src="assets/logo.svg" alt="logo"></div>
             <div class="now-playing">
                 <div class="text-nowplaying">NOW PLAYING</div>
                 <div class="text-artist">Kandace Springs</div>
                 <div class="text-song">Soul Eyes</div>
             </div>
-            <div class="play-button"><img src="./assets/play_button.svg" alt="play_button"></div>
+            <div class="play-button"><img id="play" src="./assets/play_button.svg" alt="play_button"></div>
         </header>
-
-        <div class="row2"><img src="./assets/row2.svg" alt="row2"></div>
-
-        <div class="row3">
-            <div class="howto">HOW TO <br> LISTEN <br> TO</div>
-            <div class="pallino"></div>
-            <div class="strano"></div>
-            <div class="lista"></div>
+        <div class="row2">
+			<img id ="illu-1" src="./assets/illu-1.svg" alt="First illustration">
+		</div>
+        <div class="howto">
+            <div class="howto-text">HOW TO <br> LISTEN <br> TO</div>
+            <div class="dot"></div>
+            <div class="j-img"><img id="j-img" src="./assets/j-img.svg" alt="j-img"></div>
+            <div class="fm-cities">
+				<div id="text-1fm"><span id="no_one">1</span> <span id="FMFM">FM</span></div>
+				<div class="cities-text"><span>Braşov</span> <span>#</span></div>
+				<div class="cities-text"><span>Bucureşti</span> <span>#</span></div>
+				<div class="cities-text"><span>Cluj Napoca</span> <span>#</span></div>
+				<div class="cities-text"><span>Constanţa</span> <span>#</span></div>
+				<div class="cities-text"><span>Craiova</span> <span>#</span></div>
+				<div class="cities-text"><span>Iaşi</span> <span>#</span></div>
+				<div class="cities-text"><span>Oradea</span> <span>#</span></div>
+				<div class="cities-text"><span>Timişoara</span> <span>#</span></div>
+				<div class="cities-text"><span>Sibiu</span> <span>#</span></div>
+			</div>
         </div>
+		<div class="online-url">
+			<div class="websites-list">
+				<span id="no_two">2</span><span id="ONON">Online</span>
+				<div class="websites-url">
+					<span><a href="https://jazzfm.ro/">jazzfm.ro</a></span>
+					<span><img src="/assets/arrow-top.svg" alt="arrow-top"></span>
+				</div>
+				<div class="websites-url">
+					<span><a href="https://tunein.com/radio/Jazz-FM-Romania-983-s244293/">TuneIn</a></span>
+					<span><img src="/assets/arrow-out.svg" alt="arrow-out"></span>
+				</div>
+				<div class="websites-url">
+					<span><a href="http://streema.com/radios/play/Jazz_FM_Romania?">Streema</a></span>
+					<span><img src="/assets/arrow-out.svg" alt="arrow-out"></span>
+				</div>
+			</div>
+			<div class="a-img"><img id="a-img" src="./assets/a-img.svg" alt="a-img"></div>
+		</div>
 
-        <div class="row4"></div>
+        <div class="row4">
+
+		</div>
+
         <div class="row5"></div>
         <div class="row6"></div>
         <div class="row7"></div>
