--- a/index.html
+++ b/index.html
@@ -39,19 +39,10 @@
         </div>
 		<div class="online-url">
 			<div class="websites-list">
-				<span id="no_two">2</span><span id="ONON">Online</span>
-				<div class="websites-url">
-					<span><a href="https://jazzfm.ro/">jazzfm.ro</a></span>
-					<span><img src="/assets/arrow-top.svg" alt="arrow-top"></span>
-				</div>
-				<div class="websites-url">
-					<span><a href="https://tunein.com/radio/Jazz-FM-Romania-983-s244293/">TuneIn</a></span>
-					<span><img src="/assets/arrow-out.svg" alt="arrow-out"></span>
-				</div>
-				<div class="websites-url">
-					<span><a href="http://streema.com/radios/play/Jazz_FM_Romania?">Streema</a></span>
-					<span><img src="/assets/arrow-out.svg" alt="arrow-out"></span>
-				</div>
+				<div class="text-2online"><span id="no_two">2</span><span id="ONON">Online</span></div>
+				<div class="websites-url"><span><a href="https://jazzfm.ro/">jazzfm.ro</a></span> <span><img src="/assets/arrow-top.svg" alt="arrow-top"></span></div>
+				<div class="websites-url"><span><a href="https://tunein.com/radio/Jazz-FM-Romania-983-s244293/">TuneIn</a></span> <span><img src="/assets/arrow-out.svg" alt="arrow-out"></span></div>
+				<div class="websites-url"><span><a href="http://streema.com/radios/play/Jazz_FM_Romania?">Streema</a></span> <span><img src="/assets/arrow-out.svg" alt="arrow-out"></span></div>
 			</div>
 			<div class="a-img"><img id="a-img" src="./assets/a-img.svg" alt="a-img"></div>
 		</div>
