--- a/index.html
+++ b/index.html
@@ -46,9 +46,17 @@
 			</div>
 			<div class="a-img"><img id="a-img" src="./assets/a-img.svg" alt="a-img"></div>
 		</div>
-
-        <div class="row4">
-
+        <div class="devices">
+			<div class="dev-list">
+				<div class="text-3dev"><span id="no_three">3</span><span id="DEV">Devices</span></div>
+				<div class="dev-text"><span><h3>Apple Siri</h3>"Hey Siri, Play Jazz FM Romania!"</span></div>
+				<div class="dev-text"><span><h3>Google Home</h3>"Ok Google, Play Jazz FM Romania!"</span></div>
+				<div class="dev-text"><span><h3>Amazon Echo</h3>"Alexa, play Jazz FM Romania!"</span></div>
+			</div>
+			<div class="z-img">
+				<img id="zeta" src="./assets/z-img.svg" alt="z-img">
+				<img id="zeta" src="./assets/z-img.svg" alt="z-img">
+			</div>
 		</div>
 
         <div class="row5"></div>
