--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
             <div class="play-button"><img id="play" src="./assets/play_button.svg" alt="play_button"></div>
         </header>
-        <div class="row2">
+        <div class="il-row-1">
 			<img id ="illu-1" src="./assets/illu-1.svg" alt="First illustration">
 		</div>
         <div class="howto">
@@ -58,11 +58,126 @@
 				<img id="zeta" src="./assets/z-img.svg" alt="z-img">
 			</div>
 		</div>
-
-        <div class="row5"></div>
-        <div class="row6"></div>
-        <div class="row7"></div>
-        <div class="row8"></div>
+        <div class="il-row-2">
+			<img id="illu-2" src="./assets/illu-2.svg" alt="Second illustration">
+		</div>
+        <div class="title-schedule">
+			<div class="text-schedule">SCHED<br>ULE</div>
+			<div class="dot"></div>
+		</div>
+		<div class="schedule-wrap">
+			<div id="mon">
+			<details open>
+			<summary>Mon</summary>
+				<div class="sched-list"><span id="time-table">06:00</span><span>Good Morning Jazz</span></div>
+				<div class="sched-list"><span id="time-table">06:00</span><span>Good Morning Jazz</span></div>
+				<div class="sched-list"><span id="time-table">06:00</span><span>Good Morning Jazz</span></div>
+				<div class="sched-list"><span id="time-table">09:00</span><span>Offizz Time</span></div>
+				<div class="sched-list"><span id="time-table">13:00</span><span>My Generation</span></div>
+				<div class="sched-list"><span id="time-table">17:00</span><span>Jazz, Soul & Blues</span></div>
+				<div class="sched-list"><span id="time-table">21:00</span><span>Taxi Blues</span></div>
+				<div class="sched-list"><span id="time-table">23:00</span><span>Jazz by Night</span></div>
+			</details></div>
+			<div id="tue">
+			<details open>
+				<summary>Tue</summary>
+				<div class="sched-list"><span id="time-table">06:00</span><span>Good Morning Jazz</span></div>
+				<div class="sched-list"><span id="time-table">09:00</span><span>Offizz Time</span></div>
+				<div class="sched-list"><span id="time-table">13:00</span><span>My Generation</span></div>
+				<div class="sched-list"><span id="time-table">17:00</span><span>Jazz, Soul & Blues</span></div>
+				<div class="sched-list"><span id="time-table">21:00</span><span>Jazz Variations</span></div>
+				<div class="sched-list"><span id="time-table">23:00</span><span>Jazz by Night</span></div>
+			</details></div>
+			<div id="wed">
+			<details open>
+				<summary>Wed</summary>
+				<div class="sched-list"><span id="time-table">06:00</span><span>Good Morning Jazz</span></div>
+				<div class="sched-list"><span id="time-table">09:00</span><span>Offizz Time</span></div>
+				<div class="sched-list"><span id="time-table">13:00</span><span>My Generation</span></div>
+				<div class="sched-list"><span id="time-table">17:00</span><span>Jazz, Soul & Blues</span></div>
+				<div class="sched-list"><span id="time-table">21:00</span><span>Jazz Talk</span></div>
+				<div class="sched-list"><span id="time-table">23:00</span><span>Jazz by Night</span></div>
+			</details></div>
+			<div id="thu">
+			<details open>
+				<summary>Thu</summary>
+				<div class="sched-list"><span id="time-table">06:00</span><span>Good Morning Jazz</span></div>
+				<div class="sched-list"><span id="time-table">09:00</span><span>Offizz Time</span></div>
+				<div class="sched-list"><span id="time-table">13:00</span><span>My Generation</span></div>
+				<div class="sched-list"><span id="time-table">17:00</span><span>Jazz, Soul & Blues</span></div>
+				<div class="sched-list"><span id="time-table">21:00</span><span>Live in Concert</span></div>
+				<div class="sched-list"><span id="time-table">23:00</span><span>Jazz by Night</span></div>
+			</details></div>
+			<div id="fri">
+			<details open>
+				<summary>Fri</summary>
+				<div class="sched-list"><span id="time-table">06:00</span><span>Good Morning Jazz</span></div>
+				<div class="sched-list"><span id="time-table">09:00</span><span>Offizz Time</span></div>
+				<div class="sched-list"><span id="time-table">13:00</span><span>My Generation</span></div>
+				<div class="sched-list"><span id="time-table">17:00</span><span>Jazz, Soul & Blues</span></div>
+				<div class="sched-list"><span id="time-table">21:00</span><span>Vibe Ride</span></div>
+				<div class="sched-list"><span id="time-table">23:00</span><span>Jazz by Night</span></div>
+			</details></div>
+			<div id="sat">
+			<details open>
+				<summary>Sat</summary>
+				<div class="sched-list"><span id="time-table">06:00</span><span>Good Morning Jazz</span></div>
+				<div class="sched-list"><span id="time-table">09:00</span><span>Espresso</span></div>
+				<div class="sched-list"><span id="time-table">13:00</span><span>Lazy weekend</span></div>
+				<div class="sched-list"><span id="time-table">21:00</span><span>Jazz Boulevard</span></div>
+				<div class="sched-list"><span id="time-table">23:00</span><span>Jazz by Night</span></div>
+			</details></div>
+			<div id="sun">
+			<details open>
+				<summary>Sun</summary>
+				<div class="sched-list"><span id="time-table">06:00</span><span>Good Morning Jazz</span></div>
+				<div class="sched-list"><span id="time-table">09:00</span><span>Espresso</span></div>
+				<div class="sched-list"><span id="time-table">13:00</span><span>Lazy weekend</span></div>
+				<div class="sched-list"><span id="time-table">21:00</span><span>Love Story</span></div>
+				<div class="sched-list"><span id="time-table">23:00</span><span>Jazz by Night</span></div>
+			</details></div>
+		</div>
+        <div class="sliding-text">
+			<div class="sliding-container">
+				<div class="sliding1">JAZZ FM ROMANIA</div>
+			</div>
+			<div class="sliding-container">
+				<div class="sliding2">SIBIU ONLINE CLUJ ONLINE Braşov ONLINE</div>
+			</div>
+			<div class="sliding-container">
+				<div class="sliding3">Bucureşti ONLINE Iaşi ONLINE Timişoara ONLINE</div>
+			</div>
+			<img id="keyboard" src="./assets/keyboard.svg" alt="keyboard">
+		</div>
+        <div class="scroll-in-scroll">
+			<div class="event-list-container">
+				<div class="event-title">Jazz in Romania</div>
+				<div class="event-loc"><span>Jazz în Church</span><span>Bucureşti</span></div>
+				<div class="event-loc"><span>Green Hours Jazz Fest</span><span>Bucureşti</span></div>
+				<div class="event-loc"><span>Bucharest Jazz Festival</span><span>Bucureşti</span></div>
+				<div class="event-loc"><span>Ziua Internaţională a Jazzului</span><span>Naţional</span></div>
+				<div class="event-loc"><span>Jazz City</span><span>Iaşi</span></div>
+				<div class="event-loc"><span>Jazz în the Park</span><span>Cluj</span></div>
+				<div class="event-loc"><span>Jazz TM</span><span>Gărâna</span></div>
+				<div class="event-loc"><span>Gărâna Jazz Festival</span><span>Sângeorz-Băi</span></div>
+				<div class="event-loc"><span>Roland Jazz Festival</span><span>Miercurea Ciuc</span></div>
+				<div class="event-loc"><span>Ciuc Jazz Festival</span><span>Sibiu</span></div>
+				<div class="event-loc"><span>Sibiu Jazz Festival</span><span>Deva</span></div>
+				<div class="event-loc"><span>Deva Jazz Festival</span><span>Braşov</span></div>
+				<div class="event-loc"><span>Braşov Jazz & Blues Festival</span><span>Smida</span></div>
+				<div class="event-loc"><span>Smida Jazz Festival</span><span>Târgu-Mureş</span></div>
+				<div class="event-loc"><span>Festivalul Internaţional Studenţesc de Jazz</span><span>Bucureşti</span></div>
+				<div class="event-loc"><span>Bucharest International Jazz Competition & Festival</span><span>Brăila</span></div>
+				<div class="event-loc"><span>Festivalul internaţional de Jazz „Johnny Răducanu”</span><span>Cluj</span></div>
+				<div class="event-loc"><span>Transilvania Jazz Festival</span><span>Cluj</span></div>
+			</div>
+			<div class="sheep-img">
+				<img id="sheep" src="./assets/sheep.svg" alt="sheep">
+			</div>
+		</div>
+		<div class="il-row-3">
+			<img id="illu-3" src="./assets/illu-3.svg" alt="Third illustration">
+		</div>
         <footer></footer>
     </div>
     
